# nek5000reader

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: docs.yml  release.yml  tests.yml
nek5000reader/: __init__.py  geometry.py  header.py  reader.py  utils.py  variables.py
tests/: test_reader.py
tests/data/: ATTRIBUTION.md  stsabl.nek5000
tests/mpi/: test_mpi_reader.py
