[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nek5000reader"
version = "0.1.2"
description = "A Python library for reading and processing Nek5000 simulation files"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Victor Mateevitsi", email = "victor@mateevitsi.com"}
]
dependencies = [
    "numpy",
    "mpi4py",
]

[project.urls]
Homepage = "https://github.com/mvictoras/nek5000reader"

[tool.setuptools.packages.find]
where = ["."]
include = ["nek5000reader*"]
